--- a/package.json
+++ b/package.json
@@ -7,17 +7,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/core": "^0.34.3",
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/forms": "^0.5.10",
     "autoprefixer": "10.4.20",
     "bcryptjs": "^3.0.2",
     "clsx": "^2.1.1",
-    "next": "15.4.0-canary.16",
-    "next-auth": "5.0.0-beta.27",
+    "next": "^15.4.10",
     "postcss": "8.5.1",
     "postgres": "^3.4.5",
-    "react": "latest",
-    "react-dom": "latest",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "tailwindcss": "3.4.17",
     "typescript": "5.7.3",
     "use-debounce": "^10.0.4",
